# locked-in

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml
docs/: ARCHITECTURE.md  focus-warden-explainer.html
docs/ideas/: Block websites, rewarding
docs/memory/: 20260508_1800_idle_auto_pause.md  20260508_2130_task_detail_timeline.md  20260508_2300_task_notes_on_finish_extend.md  20260509_1400_three_bugfixes.md  20260509_1600_decouple_idle_sensitivity.md  20260509_1800_fix_stretch_lockout.md  20260509_Phase2_FragmentRendering_NotesCalendarSPA.md  20260510_1200_architectural_refactor.md  20260510_1300_hardware_calibration.md  20260510_1545_daemon_decoupling.md  20260510_1600_unified_dashboard_refactor.md  20260510_2330_daemon_crash_and_ui_fixes.md  20260510_eta_popup_three_options.md  20260510_persistent_navigation.md  20260510_task_detail_edit.md  20260510_unified_dashboard.md  20260511_1219_start_button_first_pending_task.md  20260511_1855_drag_reorder_drop_sticky.md  20260511_1920_web_idle_watcher_thread.md  20260511_1930_manual_threshold_override.md  20260511_fix_auto_chain_stale_deadline.md  20260511_remove_daemon_task_start_mirror.md  20260511_store_owned_timing_and_daemon_enforcement.md  20260512_1345_configurable_irq_exclusion.md
docs/plans/: 20260504_195259_focus_warden.md  (+5 more)
systemd/: focus-warden-browser.service  focus-warden-web.service  focus-warden.service  locked-in-browser.service  locked-in-web.service  locked-in.service
tests/: test_daemon_timing_ownership.py  test_idle_detector.py  test_web_frontend.py
(+77 files in other folders)
