[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locked-in"
version = "0.1.0"
description = "Linux desktop focus enforcer — scheduled tasks, enforced breaks, and hard shutdowns (Locked-In)"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "PyQt6>=6.5.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
notion = ["notion-client>=2.0.0"]

[project.scripts]
locked-in = "locked_in.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/locked_in"]
